--- a/src/app/display-canvas/display-canvas.component.css
+++ b/src/app/display-canvas/display-canvas.component.css
@@ -1,5 +1,5 @@
 canvas {
-  border: 1px solid black;
-  height: 100%;
-  width: 100%;
+  border: 2px solid black;
+  height: 500px;
+  width: 700px;
 }
