--- a/src/app/app-root.component.html
+++ b/src/app/app-root.component.html
@@ -1,3 +1,5 @@
 <app-display-canvas [plyFilePath]="plyFilePath"></app-display-canvas>
 
-<button (click)="test()">test</button>
+<button (click)="getPLYFiles()">test</button>
+
+<img src="assets/testImg.jpg" />
