--- a/src/app/display-canvas/display-canvas.component.css
+++ b/src/app/display-canvas/display-canvas.component.css
@@ -1,5 +1,7 @@
 canvas {
   border: 2px solid black;
-  height: 500px;
-  width: 700px;
+  height: 100%;
+  width: 100%;
+  max-height: 500px;
+  max-width: 1000px;
 }
